# pysegreduce

./: .gitignore  CMakeLists.txt  README.md  pyproject.toml  setup.py
examples/: basic_usage.py
pysegreduce/: __init__.py
pysegreduce/tests/: __init__.py  test_basic.py
src/: segmented_reduce.cu
src/pysegreduce/: __init__.py
