[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "pysegreduce"
version = "0.1.0"
description = "A CUDA-accelerated segmented reduction library for Python"
requires-python = ">=3.8, <3.13"
license = {text = "MIT"}
dependencies = [
    "pybind11>=2.10.0",
]

[tool.pixi.project]
channels = ["conda-forge"]
platforms = ["linux-64"]


[tool.pixi.pypi-options]
no-build-isolation = ["pysegreduce"]

[tool.pixi.system-requirements]
cuda = "12.4"

[tool.pixi.build-dependencies]
cuda = "~=12.4"
setuptools = ">=42"
pybind11 = ">=2.10.0"

[tool.pixi.tasks]

[tool.pixi.dependencies]
pip = ">=25.0.1,<26"
